--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: java
+language: java.
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 install: javac TI_SP/src/cz/ti/gramatika/*.java
 script: 
   - cd TI_SP/src
